--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/ListViewStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/ListViewStyles.xaml
@@ -99,16 +99,26 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                                 <VisualState x:Name="Unselected" />
                                 <VisualState x:Name="Selected">
                                     <Storyboard>
-                                        <ColorAnimationUsingKeyFrames Storyboard.TargetName="PART_Border" Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
+
+                                        <ColorAnimationUsingKeyFrames
+                                            Storyboard.TargetName="PART_Border"
+                                            Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
+
                                             <EasingColorKeyFrame KeyTime="0" Value="{StaticResource AccentColor}" />
                                         </ColorAnimationUsingKeyFrames>
+
                                     </Storyboard>
                                 </VisualState>
                                 <VisualState x:Name="SelectedUnfocused">
                                     <Storyboard>
-                                        <ColorAnimationUsingKeyFrames Storyboard.TargetName="PART_Border" Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
+
+                                        <ColorAnimationUsingKeyFrames
+                                            Storyboard.TargetName="PART_Border"
+                                            Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
+
                                             <EasingColorKeyFrame KeyTime="0" Value="{StaticResource PrimaryLightColor}" />
                                         </ColorAnimationUsingKeyFrames>
+
                                     </Storyboard>
                                 </VisualState>
                             </VisualStateGroup>
@@ -122,6 +132,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+
+        <!--<Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="Blue"></Setter>
+            </Trigger>
+        </Style.Triggers>-->
     </Style>
 
 </ResourceDictionary>
