--- a/sources/VeloCity.Wpf.Presentation/Pages/Menu/MenuPage.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/Menu/MenuPage.xaml
@@ -28,28 +28,35 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     d:DesignHeight="450"
     d:DesignWidth="800">
 
-    <UniformGrid>
-        
-        <UniformGrid.Resources>
-            <Style TargetType="{x:Type Button}">
-                <Setter Property="Margin" Value="40" />
-                <Setter Property="MaxWidth" Value="300" />
-                <Setter Property="MaxHeight" Value="300" />
-                <Setter Property="FontSize" Value="30" />
-            </Style>
-        </UniformGrid.Resources>
+    <ScrollViewer
+        Margin="50">
 
-        <Button
-            Content="Sprints" />
+        <StackPanel
+            Orientation="Vertical">
 
-        <Button
-            Content="Team" />
+            <StackPanel.Resources>
+                <Style TargetType="{x:Type Button}">
+                    <Setter Property="Margin" Value="20" />
+                    <Setter Property="FontSize" Value="30" />
+                    <Setter Property="HorizontalAlignment" Value="Left" />
+                    <Setter Property="Width" Value="400" />
+                    <Setter Property="Padding" Value="20" />
+                </Style>
+            </StackPanel.Resources>
 
-        <Button
-            Content="Holidays" />
+            <Button
+                Content="Sprints" />
 
-        <Button
-            Content="Statistics" />
-    </UniformGrid>
+            <Button
+                Content="Team" />
+
+            <Button
+                Content="Holidays" />
+
+            <Button
+                Content="Statistics" />
+        </StackPanel>
+
+    </ScrollViewer>
 
 </UserControl>
