--- a/sources/VeloCity.Wpf.Presentation/Pages/Team/TeamPage.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/Team/TeamPage.xaml
@@ -50,15 +50,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <ListView
             Grid.Column="0"
             ItemsSource="{Binding TeamMembers}"
-            SelectedItem="{Binding SelectedTeamMember}"
-            Padding="100">
+            SelectedItem="{Binding SelectedTeamMember}">
 
             <ListView.ItemTemplate>
                 <DataTemplate>
 
                     <TextBlock
                         Text="{Binding}"
-                        Margin="0 5 0 5">
+                        Margin="15 5">
 
                         <TextBlock.Style>
                             <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}">
