--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/LabelStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/LabelStyles.xaml
@@ -26,8 +26,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <Style TargetType="{x:Type Label}">
         <Setter Property="FontFamily" Value="{StaticResource DefaultFontFamily}" />
-        <Setter Property="FontSize" Value="16" />
-        <Setter Property="Foreground" Value="{StaticResource FontPrimaryDarkBrush}" />
+        <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}" />
+        <Setter Property="Foreground" Value="{StaticResource FontPrimaryBrush}" />
         <Setter Property="Margin" Value="0" />
         <Setter Property="Padding" Value="0" />
 
