moved the sprint member details as row details into the main data grid

--- a/sources/VeloCity.Wpf.Presentation/Pages/SprintCalendar/SprintCalendarView.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/SprintCalendar/SprintCalendarView.xaml
@@ -185,7 +185,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow" BasedOn="{StaticResource {x:Type DataGridRow}}">
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding IsWorkDay}" Value="False">
+                        <DataTrigger Binding="{Binding IsEnabled}" Value="False">
                             <Setter Property="IsEnabled" Value="False" />
                         </DataTrigger>
                     </Style.Triggers>
